# parsero

./: .gitignore  .travis.yml  ChangeLog.md  LICENSE  README.md  build.sh  cabal.project  cuceta.cabal  cuceta.nix  default.nix  load.sh  parsero.cabal  parsero.nix  run.sh  shell.nix  stack.yaml
app/: Main.hs
src/: Cuceta.hs  Parsec.hs
src/Cuceta/: Char.hs  Combinators.hs  Parser.hs  Tokenizer.hs
src/Text/: Cuceta.hs  Parsero.hs
src/Text/Cuceta/: Char.hs  Combinators.hs  Parser.hs  Stream.hs  Tokenizer.hs
src/Text/Parsero/: Char.hs  Combinators.hs  Parser.hs  Stream.hs  Tokenizer.hs
test/: Spec.hs
