name:           cuceta
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/appositum/cuceta#readme>
homepage:       https://github.com/appositum/cuceta#readme
bug-reports:    https://github.com/appositum/cuceta/issues
author:         Eddie
maintainer:     appositum@protonmail.com
copyright:      2018 Eddie
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/appositum/cuceta

library
  exposed-modules:
      Cuceta
      Cuceta.Char
      Cuceta.Combinators
      Cuceta.Parser
  other-modules:
      Paths_cuceta
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

test-suite cuceta-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_cuceta
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , cuceta
  default-language: Haskell2010
