name:           cuceta
version:        0.2.0.0
description:    Please see the README on GitHub at <https://github.com/appositum/cuceta#readme>
homepage:       https://github.com/appositum/cuceta#readme
bug-reports:    https://github.com/appositum/cuceta/issues
author:         Eddie
maintainer:     appositum@protonmail.com
copyright:      2018 Eddie
license:        Apache-2.0
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/appositum/cuceta

library
  exposed-modules:
      Text.Cuceta
      Text.Cuceta.Char
      Text.Cuceta.Combinators
      Text.Cuceta.Parser
      Text.Cuceta.Tokenizer
      Text.Cuceta.Stream
  other-modules:
      Paths_cuceta
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , text
  default-language: Haskell2010

test-suite cuceta-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_cuceta
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
      base >=4.7 && <5
    , cuceta
  default-language: Haskell2010
