name:           parsero
version:        0.2.0.0
description:    Please see the README on GitHub at <https://github.com/appositum/parsero#readme>
homepage:       https://github.com/appositum/parsero#readme
bug-reports:    https://github.com/appositum/parsero/issues
author:         Eddie
maintainer:     appositum@protonmail.com
copyright:      2018 Eddie
license:        Apache-2.0
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/appositum/parsero

library
  exposed-modules:
      Text.Parsero
      Text.Parsero.Char
      Text.Parsero.Combinators
      Text.Parsero.Parser
      Text.Parsero.Tokenizer
      Text.Parsero.Stream
  other-modules:
      Paths_parsero
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , text
  default-language: Haskell2010

test-suite parsero-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_parsero
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
      base >=4.7 && <5
    , parsero
    , hspec
    , QuickCheck
  default-language: Haskell2010
